SCRUM-198 [fix] SonarLint